...
          adjustsFontSizeToFit
          className="w-full py-1 text-center font-breathly-regular text-lg text-slate-800"
          maxFontSizeMultiplier={1.2}
          minimumFontScale={0.85}
          numberOfLines={1}
        >
          Start a new session
        </Text>
      </Pressable>
      <Animated.Text className="bg-red my-2 text-center font-breathly-regular text-lg font-light text-slate-500">
        or
      </Animated.Text>
      <Pressable
...
          adjustsFontSizeToFit
          className="w-full py-1 text-center font-breathly-regular text-lg text-slate-800"
          maxFontSizeMultiplier={1.2}
          minimumFontScale={0.85}
          numberOfLines={1}
        >
          Customize the experience
        </Text>
      </Pressable>
    </Animated.View>
  );
};

