...
                </Row>
              ))}
            </Column>
          </AlertDialog.Text>
          <AlertDialog.DismissButton>
            <TextButton onClick={closeDialog}>
              <Text>Cancel</Text>
            </TextButton>
          </AlertDialog.DismissButton>
        </AlertDialog>
      )}
    </>
  );
...
